--- a/urban-dictionary-api.cabal
+++ b/urban-dictionary-api.cabal
@@ -21,7 +21,8 @@ library
                        http-types > 0.8 && < 0.9,
                        aeson > 0.8 && < 0.9,
                        bytestring > 0.10 && < 0.11,
-                       binary > 0.5
+                       binary > 0.5,
+                       text > 1.2 && < 1.3
   default-language:    Haskell2010
 
 test-suite ud-api-tests
